hphp/hack/test/typecheck/nonnull/enum_of_nonnull2.php.exp
File "enum_of_nonnull2.php", line 7, characters 7-7:
Enums must be int or string or arraykey, not nonnull (Typing[4024])
